[metadata]
name = xutils
version = 0.2.1
summary = A Fragmentary Python Library
description-file = README.md
author = xgfone
author-email = xgfone@126.com
maintainer = xgfone
maintainer-email = xgfone@126.com
home-page = https://github.com/xgfone/xutils
license = MIT
platform = UNIX/Linux
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pycom

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
